--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/ramda": "^0.27.6",
@@ -13,15 +15,21 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.0",
     "@types/typography": "^0.16.3",
+    "axios": "^0.19.2",
     "clsx": "^1.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "husky": "^4.2.5",
     "jest-styled-components": "^7.0.2",
     "lint-staged": "^10.2.11",
+    "moment": "^2.27.0",
     "prettier": "^2.0.5",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-placeholder": "^4.0.3",
     "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1",
     "styled-components": "^5.1.1",
     "stylelint": "^13.6.1",
     "stylelint-config-recommended": "^3.0.0",
@@ -58,5 +66,6 @@
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
